# trustami

./: .gitignore  Cargo.toml  LICENSE.md  README.md
data/: italy.xml
src/: inverse_doc_frequency.rs  lib.rs  main.rs  os_interaction.rs  parser.rs  path_resolver.rs  term_frequency.rs  tokenizer.rs  utils.rs  view.rs
test_data/: ai.xml  ancient_rome.xml  comp_sci.xml  machine_learning.xml  tfidf.xml
