[package]
name = "trustami"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "string"] }
dirs = "6.0.0"
quick-xml = "0.38.4"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
